website/versioned_docs/version-2.11.x/reference/subsystems/autoflake.mdx
---
title: autoflake
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Autoflake Python code formatter (https://github.com/myint/autoflake).

Backend: <span className="color--primary">`pants.backend.experimental.python.lint.autoflake`</span>

Config section: <span className="color--primary">`[autoflake]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]autoflake-skip`}
  env_repr="PANTS_AUTOFLAKE_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Autoflake when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--autoflake-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_AUTOFLAKE_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Autoflake, e.g.
  `--autoflake-args='--target-version=py37 --quiet'`.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--autoflake-version=<str>`}
  env_repr="PANTS_AUTOFLAKE_VERSION"
  default_repr={`autoflake==1.4`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--autoflake-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_AUTOFLAKE_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--autoflake-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_AUTOFLAKE_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--autoflake-lockfile=<str>`}
  env_repr='PANTS_AUTOFLAKE_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/python/lint/autoflake/autoflake.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=autoflake`.

As explained at https://www.pantsbuild.org/v2.11/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--autoflake-console-script=<str>`}
  env_repr="PANTS_AUTOFLAKE_CONSOLE_SCRIPT"
  default_repr={`autoflake`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--autoflake-entry-point=<str>`}
  env_repr="PANTS_AUTOFLAKE_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

## Deprecated options

None

</span>

